WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56376
ASSERTION FAILED: !HashTranslator::equal(KeyTraits::emptyValue(), key)
https://bugs.webkit.org/show_bug.cgi?id=56376
Summary
ASSERTION FAILED: !HashTranslator::equal(KeyTraits::emptyValue(), key)
Berend-Jan Wever
Reported
2011-03-15 08:19:02 PDT
Created
attachment 85806
[details]
Repro Chromium:
http://code.google.com/p/chromium/issues/detail?id=76190
Repro: Open the below file in Chromium, open inspector (CTRL+SHIFT+J), refresh page. <body onload="document.open();"></body> Stack: 0037d8bc 56be7f8f chrome_56720000!WTF::HashTable<WebCore::Node *,std::pair<WebCore::Node *,unsigned int>,WTF::PairFirstExtractor<std::pair<WebCore::Node *,unsigned int> >,WTF::PtrHash<WebCore::Node *>,WTF::PairHashTraits<WTF::HashTraits<WebCore::Node *>,WTF::HashTraits<unsigned int> >,WTF::HashTraits<WebCore::Node *> >::checkKey<WebCore::Node *,WTF::IdentityHashTranslator<WebCore::Node *,std::pair<WebCore::Node *,unsigned int>,WTF::PtrHash<WebCore::Node *> > >+0x6a [c:\src\chromium\internal\src\third_party\webkit\source\javascriptcore\wtf\hashtable.h @ 465] 0037d8e4 56be7baa chrome_56720000!WTF::HashTable<WebCore::Node *,std::pair<WebCore::Node *,unsigned int>,WTF::PairFirstExtractor<std::pair<WebCore::Node *,unsigned int> >,WTF::PtrHash<WebCore::Node *>,WTF::PairHashTraits<WTF::HashTraits<WebCore::Node *>,WTF::HashTraits<unsigned int> >,WTF::HashTraits<WebCore::Node *> >::lookup<WebCore::Node *,WTF::IdentityHashTranslator<WebCore::Node *,std::pair<WebCore::Node *,unsigned int>,WTF::PtrHash<WebCore::Node *> > >+0x2f [c:\src\chromium\internal\src\third_party\webkit\source\javascriptcore\wtf\hashtable.h @ 481] 0037d8f4 56be7703 chrome_56720000!WTF::HashTable<WebCore::Node *,std::pair<WebCore::Node *,unsigned int>,WTF::PairFirstExtractor<std::pair<WebCore::Node *,unsigned int> >,WTF::PtrHash<WebCore::Node *>,WTF::PairHashTraits<WTF::HashTraits<WebCore::Node *>,WTF::HashTraits<unsigned int> >,WTF::HashTraits<WebCore::Node *> >::lookup+0x1a [c:\src\chromium\internal\src\third_party\webkit\source\javascriptcore\wtf\hashtable.h @ 343] 0037d908 56be6c33 chrome_56720000!WTF::HashMap<WebCore::Node *,unsigned int,WTF::PtrHash<WebCore::Node *>,WTF::HashTraits<WebCore::Node *>,WTF::HashTraits<unsigned int> >::get+0x23 [c:\src\chromium\internal\src\third_party\webkit\source\javascriptcore\wtf\hashmap.h @ 277] 0037d920 56be670b chrome_56720000!WebCore::InspectorBrowserDebuggerAgent::hasBreakpoint+0x43 [c:\src\chromium\internal\src\third_party\webkit\source\webcore\inspector\inspectorbrowserdebuggeragent.cpp @ 331] 0037d97c 56971fbf chrome_56720000!WebCore::InspectorBrowserDebuggerAgent::willRemoveDOMNode+0x10b [c:\src\chromium\internal\src\third_party\webkit\source\webcore\inspector\inspectorbrowserdebuggeragent.cpp @ 275] 0037d98c 56ac46fd chrome_56720000!WebCore::InspectorInstrumentation::willRemoveDOMNodeImpl+0x2f [c:\src\chromium\internal\src\third_party\webkit\source\webcore\inspector\inspectorinstrumentation.cpp @ 127] 0037d9a0 56ac44b5 chrome_56720000!WebCore::InspectorInstrumentation::willRemoveDOMNode+0x2d [c:\src\chromium\internal\src\third_party\webkit\source\webcore\inspector\inspectorinstrumentation.h @ 346] 0037d9fc 56ac266e chrome_56720000!WebCore::dispatchChildRemovalEvents+0x55 [c:\src\chromium\internal\src\third_party\webkit\source\webcore\dom\containernode.cpp @ 1055] 0037da40 56ac236e chrome_56720000!WebCore::willRemoveChildren+0xae [c:\src\chromium\internal\src\third_party\webkit\source\webcore\dom\containernode.cpp @ 393] 0037dac8 568f9288 chrome_56720000!WebCore::ContainerNode::removeChildren+0x4e [c:\src\chromium\internal\src\third_party\webkit\source\webcore\dom\containernode.cpp @ 513] 0037dadc 568f907c chrome_56720000!WebCore::Document::implicitOpen+0x28 [c:\src\chromium\internal\src\third_party\webkit\source\webcore\dom\document.cpp @ 1977] 0037dafc 56caf3ae chrome_56720000!WebCore::Document::open+0x13c [c:\src\chromium\internal\src\third_party\webkit\source\webcore\dom\document.cpp @ 1940] 0037dba0 576316ba chrome_56720000!WebCore::V8HTMLDocument::openCallback+0x29e [c:\src\chromium\internal\src\third_party\webkit\source\webcore\bindings\v8\custom\v8htmldocumentcustom.cpp @ 166] 0037dca0 5762e550 chrome_56720000!v8::internal::HandleApiCallHelper<0>+0x32a [c:\src\chromium\internal\src\v8\src\builtins.cc @ 1069] 0037dcb0 5762e4c8 chrome_56720000!v8::internal::Builtin_Impl_HandleApiCall+0x10 [c:\src\chromium\internal\src\v8\src\builtins.cc @ 1086] 0037dcc0 245e02ae chrome_56720000!v8::internal::Builtin_HandleApiCall+0x18 [c:\src\chromium\internal\src\v8\src\builtins.cc @ 1085]
Attachments
Repro
(39 bytes, text/html)
2011-03-15 08:19 PDT
,
Berend-Jan Wever
no flags
Details
Patch
(3.01 KB, patch)
2011-03-15 10:01 PDT
,
Pavel Feldman
yurys
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Seidel (no email)
Comment 1
2011-03-15 10:01:18 PDT
Pfeldman, I choose you!
Pavel Feldman
Comment 2
2011-03-15 10:01:50 PDT
Created
attachment 85821
[details]
Patch
Eric Seidel (no email)
Comment 3
2011-03-15 10:04:17 PDT
Wow, that was about the fastest fix ever. :) (I hope pfeldman got the pokemon reference.) How do we test this?
Pavel Feldman
Comment 4
2011-03-15 10:05:35 PDT
(In reply to
comment #3
)
> Wow, that was about the fastest fix ever. :) (I hope pfeldman got the pokemon reference.) > > How do we test this?
I'm trying to repro this with an iframe, if I succeed we will have a test.
Yury Semikhatsky
Comment 5
2011-03-16 08:47:55 PDT
Comment on
attachment 85821
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=85821&action=review
> Source/WebCore/inspector/InspectorBrowserDebuggerAgent.cpp:270 > + Node* parentNode = InspectorDOMAgent::innerParentNode(node);
Should it be changed to else if(Node* parentNode = InspectorDOMAgent::innerParentNode(node)) { ... ?
Pavel Feldman
Comment 6
2011-03-16 11:02:28 PDT
Committed
r81259
: <
http://trac.webkit.org/changeset/81259
>
WebKit Review Bot
Comment 7
2011-03-16 13:05:04 PDT
http://trac.webkit.org/changeset/81259
might have broken GTK Linux 64-bit Debug
Frances Cornwall
Comment 8
2024-05-22 14:42:11 PDT
***
Bug 16918
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug