2011-03-15  Pavel Feldman  <pfeldman@chromium.org>

Reviewed by Yury Semikhatsky.

        Web Inspector: ASSERTION FAILED: !HashTranslator::equal(KeyTraits::emptyValue(), key)
        https://bugs.webkit.org/show_bug.cgi?id=56376

        * inspector/InspectorBrowserDebuggerAgent.cpp:
        (WebCore::InspectorBrowserDebuggerAgent::willRemoveDOMNode):
        * inspector/front-end/DOMAgent.js:
        (WebInspector.DOMAgent.prototype._setDocument):

Canonical link: https://commits.webkit.org/71135@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81259 268f45cc-cd09-0410-ab3c-d52691b4dbfc